# Sccala

./: .buildinfo  .gitignore  README.md  fileformats.html  genindex.html  index.html  installation.html  models.html  modules.html  objects.inv  project_setup.html  py-modindex.html  sccala-env.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: build-docs.yml
_sources/: fileformats.rst.txt  models.rst.txt  project_setup.rst.txt
_sources/autoapi/: index.rst.txt
_sources/modules/: collect-scm-data.ipynb.txt  photometry.ipynb.txt  scm.ipynb.txt
autoapi/: index.html
autoapi/sccala/: index.html
docs/source/: conf.py  fileformats.rst  index.rst  installation.rst  modules.rst
modules/: collect-scm-data.html  gen-testdata.html  linefit.html  linefit.ipynb  photometry-interpolation.html  photometry-interpolation.ipynb  photometry.html  scm.html  velocity-interpolation.html
sccala/: collect_scm_data.py  gen_testdata.py  photometry_interpolation.py  project_init.py  sccala_scm.py  synthetic_photometry.py  velocity_interpolation.py
sccala/asynphot/: __init__.py  config.py  integrate.py  io.py  synphot.py
sccala/interplib/: epoch_interp.py  vel_interp.py
sccala/libio/: get_paths.py  scm_loader.py
sccala/scmlib/: models.py  sccala.py
sccala/speclib/: linefit.py  spectools.py
src/sccala/: __init__.py  aks_corr.py  collect_scm_data.py  deblind.py  gen_testdata.py  photometry_interpolation.py  project_init.py  sccala_bootstrap.py  sccala_scm.py  spectral_line_fit.py  synthetic_photometry.py  velocity_interpolation.py
(+172 files in other folders)
