[metadata]
name = sccala-sniip
version = 0.1
author = Alexander Holas 
author_email = alexander.holas@h-its.org 
description = Standardisation Framework for Core-Collapse Supernovae and Line Analysis Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlexHls/Sccala
project_urls =
    Bug Tracker = https://github.com/AlexHls/Sccala/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv2
    Operating System :: OS Independent

[options]
package_dir =
    = sccala
packages = find:
python_requires = >=3.6

[options.packages.find]
where = sccala

